style: correct spacing added between blocks

--- a/src/index.scss
+++ b/src/index.scss
@@ -44,7 +44,7 @@ h6 {
 }
 
 .content-block {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 
   &:last-child {
     margin-bottom: 0;
